--- a/src/components/Sections/Hero/Hero.module.scss
+++ b/src/components/Sections/Hero/Hero.module.scss
@@ -1,5 +1,5 @@
 .hero {
-  min-height: 100vh;
+  min-height: 94vh;
   display: flex;
   align-items: center;
   position: relative;
