--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -110,6 +110,7 @@
 html {
   scroll-behavior: smooth;
   font-size: 14px;
+  scroll-padding-top: 50px;
 }
 
 body {
